Fixed font sizing on mobile

--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -24,7 +24,7 @@ h1 {
 
 h2 {
   font-weight: 500;
-  font-size: 4rem;
+  font-size: clamp(2rem, 3.6vw, 5rem);
 }
 
 h4 {
