--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -18,7 +18,7 @@ nav {
     li {
       list-style: none;
       a {
-        color: $paper-color;
+        // color: $paper-color;
         position: relative;
         text-decoration: none;
         line-height: 24px;
@@ -66,6 +66,10 @@ nav {
 }
 
 .burger-list {
+  & li a {
+    color: $dominant-color;
+    font-size: 1.5rem;
+  }
   display: flex;
   flex-wrap: wrap;
   margin-block: 5vh;
@@ -73,7 +77,7 @@ nav {
   width: 100%;
   height: 100vh;
   flex-direction: column;
-  justify-content: space-evenly;
+  gap: 5rem;
   align-content: center;
   text-align: center;
   position: absolute;
