--- a/src/scss/utils/containers.scss
+++ b/src/scss/utils/containers.scss
@@ -6,7 +6,7 @@
 }
 
 .block-padded {
-  padding-block: 5rem;
+  padding-block: 3rem;
 }
 
 .space-between {
